k8s/prod/ingress/frontend.ingress.prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frontend-ingress
    namespace: default
    annotations:
        nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/certificate-name: app-prod-tls
spec:
    ingressClassName: nginx
    rules:
        - host: app.eliasdebock.com
          http:
              paths:
                  - path: /admin/
                    pathType: Prefix
                    backend:
                        service:
                            name: admin-app-prod-service
                            port:
                                number: 80
                  - path: /keycloak
                    pathType: Prefix
                    backend:
                        service:
                            name: keycloak-prod
                            port:
                                number: 8080
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: web-app-prod-service
                            port:
                                number: 80
    tls:
        - hosts:
              - app.eliasdebock.com
          secretName: app-prod-tls
