k8s/prod/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: my-ingress
    namespace: default
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    ingressClassName: nginx
    rules:
        - host: app.eliasdebock.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: web-app-prod-service
                            port:
                                number: 80

                  - path: /admin/
                    pathType: Prefix
                    backend:
                        service:
                            name: admin-app-prod-service
                            port:
                                number: 80
        - host: api.eliasdebock.com
          http:
              paths:
                  - path: /platform(/|$)(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: platform-api-prod-service
                            port:
                                number: 9101
                  - path: /webshop(/|$)(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: edb-webshop-api-prod-service
                            port:
                                number: 8000
    tls:
        - hosts:
              - app.eliasdebock.com
          secretName: app-tls
        - hosts:
              - api.eliasdebock.com
          secretName: api-tls
